[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-huangting"
version = "1.0.0"
description = "LangChain integration for the Huangting Protocol MCP network — the world's first lifeform OS for AI Agents"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Meng Yuanjing", email = "contact@huangting.ai" }
]
keywords = [
    "langchain",
    "mcp",
    "model-context-protocol",
    "huangting",
    "ai-agent",
    "optimization",
    "token-efficiency",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.0",
]
langchain-legacy = [
    "langchain>=0.1.0",
]
all = [
    "langchain-core>=0.1.0",
]

[project.urls]
Homepage = "https://huangtingflux.com"
Documentation = "https://huangting.ai/mcp"
Repository = "https://github.com/XianDAO-Labs/langchain-huangting"
"Bug Tracker" = "https://github.com/XianDAO-Labs/langchain-huangting/issues"
Changelog = "https://github.com/XianDAO-Labs/langchain-huangting/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_huangting*"]
